# django-starter

./: .editorconfig  .env.example  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc  README.md  Vagrantfile  babel.config.js  babel.config.json  bootstrap.sh  docker-compose.yml  manage.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tailwind.js  webpack.config.js
app/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
app/models/: __init__.py  user.py
app/settings/: base.py  local.py  production.py  test.py
djangostarter/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
djangostarter/conf/: asgi.py  urls.py  wsgi.py
djangostarter/conf/settings/: base.py  local.py  production.py  test.py
djangostarter/models/: __init__.py  user.py
djangostarter/settings/: base.py  local.py  production.py
djangostarter/static/js/: App.jsx  App.vue  index.jsx  main.js
djangostarter/static/js/components/: HelloWorld.jsx  HelloWorld.vue
djangostarter/static/scss/: main.scss
djangostarter/templates/: base.html  index.html
djangostarter/utils/: imports.py
djangostarter/views/: core.py
